lander.lessons.lander.lvl3_fly_the_lander.FlyTheLander.scala.error
Lander:2: error: class Array takes type parameters
  def getLandingZone():Array = {
                       ^Lander:23: error: not found: value zone
	if (getX() <= zone(0).x) {return 0}
                      ^Lander:25: error: not found: value zone
		if (getX()>=zone(1).x) {return 2}
                            ^Lander:25: error: type mismatch;
 found   : Unit
 required: Int
		if (getX()>=zone(1).x) {return 2}
                ^Lander:28: error: not found: value getLandingZone
  	var zone = getLandingZone()
                   ^Lander:33: error: type mismatch;
 found   : Unit
 required: Int
		if (getX()>=zone(1).x) {return 2}
                ^Lander:37: error: not found: value setPousseedesiree
  		setPousseedesiree(4) 
                ^Lander:43: error: not found: value setPousseedesiree
setPousseedesiree(4)
^Lander:45: error: not found: value setPousseedesiree
else setPousseedesiree(0)
     ^Lander:49: error: not found: value setPousseedesire
  		setPousseedesire(4)
                ^